--- a/frontend/src/components/Pages/PostsPage/PostComponent/PostComponent.module.css
+++ b/frontend/src/components/Pages/PostsPage/PostComponent/PostComponent.module.css
@@ -1,4 +1,3 @@
-
 .post_component{
     background-color: var(--white);
 
@@ -19,14 +18,12 @@
 }
 
 .post_component_footer{
-    display: flex;
-    justify-content: space-between;
+
 }
 
 .user_icon{
     height: 2rem;
     width: 2rem;
-
     border-radius: 50%;
 }
 
@@ -36,23 +33,14 @@
     height: 1px;
     background-color: var(--light-grey);
 }
-.wrap-tag{
-    display: flex;
-    justify-content: space-between;
-    /* align-items: center; */
 
-}
-
-.grade-block{
-    /* display: flex;
-    flex-direction: row; */
-    width: 100%;
-  
-}
-.grade-block img{
+.tag_block{
     display: inline;
 }
-.tag{
-    /* display: flex; */
-    width: 100%;
+
+.tag_block a{
+    margin-right: .4rem;
+    font-size: .9rem;
+    font-weight: lighter;
+    text-decoration: none;
 }
